--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prescripto - Healthcare Appointment and Prescription Management System</title>
+    <title>medimind </title>
 
-    <meta property="og:title" content="Prescripto - Healthcare Appointment and Prescription Management System" />
+    <meta property="og:title" content="medimind - Healthcare Appointment and Prescription Management System" />
     <meta property="og:description"
       content="A healthcare web app for managing appointments and viewing prescriptions, with secure user authentication and Razorpay integration for payments. Features a doctor directory, appointment scheduling, and real-time notifications." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://prescripto-eta.vercel.app/" />
-    <meta property="og:image" content="https://prescripto-eta.vercel.app/prescripto-image.png" />
-    <meta property="og:site_name" content="Prescripto" />
+    <meta property="og:site_name" content="medimind" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Prescripto - Healthcare Appointment and Prescription Management System" />
+    <meta name="twitter:title" content="medimind - Healthcare Appointment and Prescription Management System" />
     <meta name="twitter:description"
       content="Manage appointments and prescriptions with ease. Secure user authentication, Razorpay payments, doctor directory, and real-time notifications." />
-    <meta name="twitter:image" content="https://prescripto-eta.vercel.app/prescripto-image.png" />
 
     <meta name="description"
       content="Developed a healthcare app using React, enabling patients to manage appointments and view prescriptions with secure authentication and integrated Razorpay payments." />
